[package]
name = "engine_rust"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["pyrust-bt"]
description = "Rust core backtest engine with PyO3 bindings"

[lib]
name = "engine_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"] }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
duckdb = { version = "1.0", features = ["bundled"] }